# JUMO

./: .dockerignore  .env  .gitattributes  .gitignore  API.md  README.md  docker-compose.yml  dockerfile  pyproject.toml  ruff.toml
src/: jumo_service.py  startup.py
src/celery_worker/: celery_config.py  celery_server.py  pdf_process_worker.py  vllm_backend_start.py
src/const/: devices_enums.py  file_extensions.py  http_status_codes.py  ocr_lang_enum.py  redis_constants.py  task_status_enum.py
src/data/: model.py  operation.py  schema.py
src/data/redis/: cache_service.py  redis_client.py
src/processor/: content_indexing.py  markdown_splitter.py  named_entity_recognition.py  pdf_processor.py  vlm_mode.py
src/processor/converters/: doc_to_markdown.py  elements_title.py  excel_to_markdown.py  file_converters.py  markdown_math_stripper.py  table_to_markdown.py
src/processor/image_processing/: image_rag.py
src/processor/nlp_inference/: factory.py  interfaces.py  local_impl.py
src/route/: content_searching_route.py  documents_route.py  knowledgebase_api_route.py  pdf_route.py
src/utils/: auto_device_selector.py  device_selector.py  id_generator.py  logging.py  minio_tool.py  singleton.py  workers_threading_pool.py
src/wrapper/: image_processing_boost.py  logger.py  merge_text.py  pdf_boost_patch.py
